# ai-navigation

./: .gitignore  .gitmodules  99-usb-serial.rules  EastCampusLiteV2.gml  EastCampusLiteV3.gml  EastCampusLiteV4.gml  EastCampusLiteV5.gml  EastCampusLiteV6.gml  Graph: 2020-02-06 16:53:54.166236  Graph: 2022-04-16 11:24:48.102358.gml  README.md  XLabsGraphV1.gml  alternative_velodyne_setup.sh  nav_cmd_override.py  out.txt  ros_team_run.sh  run.sh  startcart  startcart.sh  test  velodyne_setup.sh  velodyne_setup.sh.old  velodyne_setup_tmp.sh  workspace_setup.bash
.git-old/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
.git-old/info/: refs
.git-old/logs/: HEAD
agc_test/scripts/: control.py  motor.py
cart_control/: CMakeLists.txt  package.xml
cart_control/launch/: autoware_localization.launch  mapping.launch  navigation.launch  navigation_localization.launch  navigation_minimal.launch
cart_control/rviz/: display.rviz
cart_endpoints/: CMakeLists.txt  package.xml
cart_endpoints/launch/: hardware_interface.launch  jacart_multi_cam.launch  jacart_passenger_cam.launch  rplidar_a3.launch  rplidar_a3.launch~  zed.launch  zed.launch.DISABLED
cart_endpoints/params/: zed.yaml
cart_endpoints/scripts/: broken_obstacle_merger.py  cart_health_monitor.py  client.py  client_old.py  frames.gv  (+33 more)
cart_planning/: CMakeLists.txt  drive_build.gml  home_loop.gml  package.xml
cart_simulator/: package.xml  teleop.py
cart_util/: speech recognition trigger.py  test_live_analysis_v2.py  velodyne_setup.sh
catkin_ws/src/navigation_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/navigation_msgs/msg/: EmergencyStop.msg  VelAngleStep.msg  WaypointsArray.msg  fe_request.msg  lat_long_point.msg  list_of_goals.msg  vel_angle.msg  vel_angle_step.msg  waypoints_array.msg
examples/: controller.py  motors_test.py  nav_instr_publisher.py  point_to_goal.py
golf_cart/: model.config  model.sdf
navigation/: CMakeLists.txt  package.xml
navigation_msgs/: CMakeLists.txt
old_scripts/: control.py  motors_test.py  point_to_goal.py  publish_request_test.py  request_to_goals.py  sample.py
planning_navigation/src/navigation/navigation/: CMakeLists.txt
(+591 files in other folders)
